tests/baselines/reference/multipleBaseInterfaesWithIncompatibleProperties.errors.txt
tests/cases/compiler/multipleBaseInterfaesWithIncompatibleProperties.ts(6,11): error TS2320: Interface 'C' cannot simultaneously extend types 'A<文字>' and 'A<数字>'.
  Named property 'x' of types 'A<文字>' and 'A<数字>' are not identical.


==== tests/cases/compiler/multipleBaseInterfaesWithIncompatibleProperties.ts (1 errors) ====
    interface A<T>
    {
        x: T
    }
    
    interface C extends A<string>, A<number> { }
              ~
!!! error TS2320: Interface 'C' cannot simultaneously extend types 'A<文字>' and 'A<数字>'.
!!! error TS2320:   Named property 'x' of types 'A<文字>' and 'A<数字>' are not identical.
    